# archbookd

./: .gitignore  Cargo.toml  build_and_deploy.sh  build_and_deploy_without_service.sh
libs/: Cargo.toml
libs/archbookd_error/: Cargo.toml
libs/archbookd_error/src/: lib.rs
libs/battery/: Cargo.toml  README.md
libs/battery/src/: lib.rs
libs/hybrid_graphics/: Cargo.toml
libs/hybrid_graphics/src/: files.rs  lib.rs
libs/peripherals/: Cargo.toml
libs/screenpad/: Cargo.toml
libs/screenpad/src/: lib.rs  service.template
libs/service_utils/: Cargo.toml
libs/service_utils/src/: lib.rs
src/: bin.rs
src/daemon/: bin.rs
src/daemon/interfaces/: battery.rs  interface_trait.rs  mod.rs  screenpad.rs
src/interfaces/: battery.rs  mod.rs  screenpad.rs
src/interfaces/peripherals/: mod.rs
src/lib/: error.rs  lib.rs  utils.rs
src/lib/battery/: mod.rs  service.template
src/lib/hybrid_graphics/: files.rs  mod.rs
src/lib/peripherals/: camera.rs  mod.rs
src/lib/screenpad/: mod.rs
src/lib/utils/: mod.rs  modprobe.rs  systemctl.rs
src/lib_cmd/: bin.rs
