[package]
name = "archbookd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
zbus = { version = "3.14.1", features = ["tokio"], default_features=false }
async-trait = "0.1.73"

screenpad = {path = "./libs/screenpad"}
battery = {path = "./libs/battery"}
hybrid_graphics = {path = "./libs/hybrid_graphics"}
archbookd_error = {path = "./libs/archbookd_error"}
radix_fmt = "1.0.0"
