[package]
name = "archbookd"
version = "0.1.0"
edition = "2021"
authors = ["Joe"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "archbookd_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "archbookd"
path = "src/bin.rs"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
zbus = { version = "3.14.1", features = ["tokio"], default_features=false }
async-trait = "0.1.73"
reqwest = "0.11.22"
json = "0.12.4"
radix_fmt = "1.0.0"