[package]
name = "hybrid_graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
archbookd_error = {path = "../archbookd_error"}
service_utils = {path = "../service_utils"}
radix_fmt = "1.0.0"
reqwest = "0.11.22"
json = "0.12.4"
